apps/crowdsec-ui/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crowdsec-web-ui
spec:
  selector:
    app: crowdsec-web-ui
  ports:
  - port: 8080
    targetPort: 8080
